# ----------------------------------------------------------------------------
# Libraries
# ----------------------------------------------------------------------------

add_subdirectory (my_third_lib)

# ----------------------------------------------------------------------------
# Executables
# ----------------------------------------------------------------------------

add_subdirectory (my_executable)

