# ============================================================================
# External requirements
# ============================================================================

find_package (Doxygen REQUIRED COMPONENTS dot)

# ============================================================================
# Targets
# ============================================================================

# ----------------------------------------------------------------------------
# Configuration files
# ----------------------------------------------------------------------------

configure_file (Doxyfile.in Doxyfile @ONLY)

# ----------------------------------------------------------------------------
# doc
# ----------------------------------------------------------------------------

add_custom_target (doc
	COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
	COMMENT "Generating documentation with Doxygen" VERBATIM)

# ============================================================================
# Install configuration
# ============================================================================

install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc
	DESTINATION share
	COMPONENT doc EXCLUDE_FROM_ALL)

